# adventofcode2021

./: .gitignore  README.md  dune-project
day1/: README.md  dune  part1.ml  part2.ml
day10/: README.md  part1.ml  part2.ml
day11/: part1.ml  part2.ml
day12/: dune  part1.ml  part2.ml
day13/: dune  part1.ml  part2.ml
day14/: part1.ml  part2.ml
day15/: part1.ml  part2.ml
day16/: part1.ml  part2.ml
day17/: dune  part2.ml
day18/: part1.ml  part2.ml
day2/: README.md  part1.ml  part2.ml
day20/: part1.ml  part2.ml
day21/: part1.ml  part2.ml
day3/: README.md  dune  part1.ml  part2.ml
day4/: README.md  part1.ml  part2.ml
day5/: README.md  dune  part1.ml  part2.ml
day6/: README.md  part1.ml  part2.ml
day7/: README.md  part1.ml  part2.ml
day8/: README.md  part1.ml  part2.ml
day9/: README.md  dune  part1.ml  part2.ml
lib/: Day1.ml  Day10.ml  Day11.ml  Day12.ml  Day13.ml  Day14.ml  Day15.ml  Day16.ml  Day17.ml  Day18.ml  Day2.ml  Day20.ml  Day21.ml  Day3.ml  Day4.ml  Day5.ml  Day6.ml  Day7.ml  Day8.ml  Day9.ml  Point.ml  Util.ml  dune
test/: day1.ml  day10.ml  day11.ml  day12.ml  day14.ml  day15.ml  day16.ml  day17.ml  day18.ml  day2.ml  day20.ml  day21.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  day8.ml  day9.ml  dune
visualizations/day11/: elm.json
visualizations/day11/src/: Main.elm
