(test
 (name day1)
 (modules day1)
 (libraries ounit2 adventofcode2021))

(test
 (name day2)
 (modules day2)
 (libraries ounit2 adventofcode2021))

(test
 (name day3)
 (modules day3)
 (libraries ounit2 adventofcode2021))

(test
 (name day4)
 (modules day4)
 (libraries ounit2 adventofcode2021))

(test
 (name day5)
 (modules day5)
 (libraries ounit2 adventofcode2021))

(test
 (name day6)
 (modules day6)
 (libraries ounit2 adventofcode2021))
