(test
 (name day1)
 (modules day1)
 (libraries ounit2 adventofcode2021))

(test
 (name day2)
 (modules day2)
 (libraries ounit2 adventofcode2021))

(test
 (name day3)
 (modules day3)
 (libraries ounit2 adventofcode2021))

(test
 (name day4)
 (modules day4)
 (libraries ounit2 adventofcode2021))

(test
 (name day5)
 (modules day5)
 (libraries ounit2 adventofcode2021))

(test
 (name day6)
 (modules day6)
 (libraries ounit2 adventofcode2021))

(test
 (name day7)
 (modules day7)
 (libraries ounit2 adventofcode2021))

(test
 (name day8)
 (modules day8)
 (libraries ounit2 adventofcode2021))

(test
 (name day9)
 (modules day9)
 (libraries ounit2 adventofcode2021))

(test
 (name day10)
 (modules day10)
 (libraries ounit2 adventofcode2021))

(test
 (name day11)
 (modules day11)
 (libraries ounit2 adventofcode2021))

(test
 (name day12)
 (modules day12)
 (libraries ounit2 adventofcode2021))

(test
 (name day14)
 (modules day14)
 (libraries ounit2 adventofcode2021))
